libs/@local/config/tests/snapshots/schema__adjacently_tagged_enum.snap
---
source: libs/@local/config/tests/schema.rs
expression: "partial_json_schema::<Adjacent>()"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "Adjacent",
  "anyOf": [
    {
      "type": "object",
      "properties": {
        "kind": {
          "type": "string",
          "const": "Database"
        },
        "settings": {
          "type": "object",
          "properties": {
            "host": {
              "description": "Database hostname.",
              "type": "string"
            },
            "port": {
              "description": "Database port.",
              "type": "integer",
              "format": "uint16",
              "maximum": 65535,
              "minimum": 0
            }
          },
          "unevaluatedProperties": false
        }
      }
    },
    {
      "type": "object",
      "properties": {
        "kind": {
          "type": "string",
          "const": "Memory"
        },
        "settings": {
          "type": "object",
          "properties": {
            "capacity": {
              "type": "integer",
              "format": "uint32",
              "minimum": 0
            }
          },
          "unevaluatedProperties": false
        }
      }
    }
  ],
  "unevaluatedProperties": false
}
