libs/@local/config/tests/snapshots/schema__collections.snap
---
source: libs/@local/config/tests/schema.rs
expression: "partial_json_schema::<Collections>()"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "Collections",
  "type": "object",
  "properties": {
    "named": {
      "type": "object",
      "additionalProperties": {
        "type": "object",
        "properties": {
          "host": {
            "description": "Database hostname.",
            "type": "string"
          },
          "port": {
            "description": "Database port.",
            "type": "integer",
            "format": "uint16",
            "maximum": 65535,
            "minimum": 0
          }
        },
        "unevaluatedProperties": false
      },
      "unevaluatedProperties": false
    },
    "optional": {
      "type": [
        "object",
        "null"
      ],
      "properties": {
        "host": {
          "description": "Database hostname.",
          "type": "string"
        },
        "port": {
          "description": "Database port.",
          "type": "integer",
          "format": "uint16",
          "maximum": 65535,
          "minimum": 0
        }
      },
      "unevaluatedProperties": false
    },
    "pair": {
      "type": "array",
      "maxItems": 2,
      "minItems": 2,
      "prefixItems": [
        {
          "type": "object",
          "properties": {
            "host": {
              "description": "Database hostname.",
              "type": "string"
            },
            "port": {
              "description": "Database port.",
              "type": "integer",
              "format": "uint16",
              "maximum": 65535,
              "minimum": 0
            }
          },
          "unevaluatedProperties": false
        },
        {
          "type": "integer",
          "format": "uint16",
          "maximum": 65535,
          "minimum": 0
        }
      ]
    },
    "stores": {
      "type": "array",
      "items": {
        "type": "object",
        "properties": {
          "host": {
            "description": "Database hostname.",
            "type": "string"
          },
          "port": {
            "description": "Database port.",
            "type": "integer",
            "format": "uint16",
            "maximum": 65535,
            "minimum": 0
          }
        },
        "unevaluatedProperties": false
      }
    }
  },
  "unevaluatedProperties": false
}
