libs/@local/config/tests/snapshots/schema__deserialization_names.snap
---
source: libs/@local/config/tests/schema.rs
expression: "partial_json_schema::<DeserializationNames>()"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "DeserializationNames",
  "type": "object",
  "properties": {
    "input": {
      "type": "integer",
      "format": "uint16",
      "maximum": 65535,
      "minimum": 0
    }
  },
  "unevaluatedProperties": false
}
