libs/@local/config/tests/snapshots/schema__duration.snap
---
source: libs/@local/config/tests/schema.rs
expression: "partial_json_schema::<Timeouts>()"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "Timeouts",
  "type": "object",
  "properties": {
    "request": {
      "type": "object",
      "properties": {
        "nanos": {
          "type": "integer",
          "format": "uint32",
          "minimum": 0
        },
        "secs": {
          "type": "integer",
          "format": "uint64",
          "minimum": 0
        }
      },
      "unevaluatedProperties": false
    }
  },
  "unevaluatedProperties": false
}
