libs/@local/config/tests/snapshots/schema__externally_tagged_enum.snap
---
source: libs/@local/config/tests/schema.rs
expression: "partial_json_schema::<External>()"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "External",
  "anyOf": [
    {
      "type": "object",
      "properties": {
        "Database": {
          "type": "object",
          "properties": {
            "host": {
              "description": "Database hostname.",
              "type": "string"
            },
            "port": {
              "description": "Database port.",
              "type": "integer",
              "format": "uint16",
              "maximum": 65535,
              "minimum": 0
            }
          },
          "unevaluatedProperties": false
        }
      },
      "additionalProperties": false
    },
    {
      "type": "object",
      "properties": {
        "Memory": {
          "type": "object",
          "properties": {
            "capacity": {
              "type": "integer",
              "format": "uint32",
              "minimum": 0
            }
          },
          "unevaluatedProperties": false
        }
      },
      "additionalProperties": false
    }
  ],
  "unevaluatedProperties": false
}
